--- a/main.css
+++ b/main.css
@@ -512,6 +512,7 @@ header nav ul li a:hover {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 30px;
     margin-top: 30px;
+    min-width: 700px;
     max-width: 1000px;
 }
 
@@ -523,8 +524,14 @@ header nav ul li a:hover {
 }
 
 .project-card img {
-    max-width: 100%;
-    display: block;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    width: 100px;
+    height: 100px;
+    border-radius: 30%;
+    margin-bottom: 15px;
+    object-fit: cover;
 }
 
 .project-card h3 {
